{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 63,
  "lineage": "3a19f7ba-7726-248e-4ddb-e2f1b2bc7c04",
  "resources": [
    {
      "module": "module.BackendServer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:257394450082:instance/i-0cb5b72b01e959e02",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb5b72b01e959e02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4d9fd5433e8e311",
            "private_dns": "ip-10-0-0-133.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.133",
            "public_dns": "ec2-65-0-100-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.100.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca247265e6af2024",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec2779ef7151440b",
            "tags": {
              "Name": "backendServer-dev_instance"
            },
            "tags_all": {
              "Name": "backendServer-dev_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b09b26135e90a3e3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.BackendServer.aws_security_group.sg_example",
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.BackendServer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:security-group/sg-0b09b26135e90a3e3",
            "description": "Allow traffic to ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b09b26135e90a3e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "BackendServer-default-sg",
            "name_prefix": "",
            "owner_id": "257394450082",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow traffic from terraform"
            },
            "tags_all": {
              "name": "allow traffic from terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e1756285e954a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:internet-gateway/igw-0053f3771929fa18e",
            "id": "igw-0053f3771929fa18e",
            "owner_id": "257394450082",
            "tags": {
              "Name": "terraform gateway"
            },
            "tags_all": {
              "Name": "terraform gateway"
            },
            "vpc_id": "vpc-0e9e1756285e954a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-aws_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:route-table/rtb-06552dd9347f78a9b",
            "id": "rtb-06552dd9347f78a9b",
            "owner_id": "257394450082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0053f3771929fa18e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform route table"
            },
            "tags_all": {
              "Name": "terraform route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e1756285e954a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_internet_gateway.terraform-gw",
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070679e6b7ad4ac8e",
            "route_table_id": "rtb-06552dd9347f78a9b",
            "subnet_id": "subnet-0ec2779ef7151440b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_internet_gateway.terraform-gw",
            "module.TerraformVPC.aws_route_table.terraform-aws_route_table",
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:subnet/subnet-0ec2779ef7151440b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec2779ef7151440b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257394450082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main subnet"
            },
            "tags_all": {
              "Name": "Main subnet"
            },
            "vpc_id": "vpc-0e9e1756285e954a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.TerraformVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_created_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:vpc/vpc-0e9e1756285e954a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0015e0cf9c95e9e86",
            "default_route_table_id": "rtb-0c73d1937bb7036b8",
            "default_security_group_id": "sg-06b8be2ac9d5a4513",
            "dhcp_options_id": "dopt-0dc86c4a3d7357bb7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9e1756285e954a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c73d1937bb7036b8",
            "owner_id": "257394450082",
            "tags": {
              "Name": "terraform-created-vpc"
            },
            "tags_all": {
              "Name": "terraform-created-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.WebServer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:257394450082:instance/i-0dcb6426c45f042bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcb6426c45f042bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd4d376d4cd2948c",
            "private_dns": "ip-10-0-0-188.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.188",
            "public_dns": "ec2-13-232-215-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.215.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051868ec5a672eb0a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec2779ef7151440b",
            "tags": {
              "Name": "WebServer-dev_instance"
            },
            "tags_all": {
              "Name": "WebServer-dev_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2c302b921fed478"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_subnet.main",
            "module.TerraformVPC.aws_vpc.terraform_created_vpc",
            "module.WebServer.aws_security_group.sg_example"
          ]
        }
      ]
    },
    {
      "module": "module.WebServer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:257394450082:security-group/sg-0b2c302b921fed478",
            "description": "Allow traffic to ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2c302b921fed478",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer-default-sg",
            "name_prefix": "",
            "owner_id": "257394450082",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow traffic from terraform"
            },
            "tags_all": {
              "name": "allow traffic from terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e1756285e954a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.TerraformVPC.aws_vpc.terraform_created_vpc"
          ]
        }
      ]
    }
  ]
}